# cpp-conway-s-game-of-life

./: CMakeLists.txt  README.md
src/: Application.cpp  Application.hpp  Config.h  Main.cpp  QuadBoard.cpp  QuadBoard.hpp  Random.cpp  Random.hpp
